Fixes#380 strength of password is now visible

--- a/src/components/ChatApp/ChatApp.css
+++ b/src/components/ChatApp/ChatApp.css
@@ -37,6 +37,55 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#183850', end
   margin-right: 0;
 }
 
+
+.is-strength-0 { color: #D1462F; }
+.is-strength-1 { color: #D1462F; }
+.is-strength-2 { color: #57B8FF; }
+.is-strength-3 { color: #57B8FF; }
+.is-strength-4 { color: #2FBF71; }
+
+.ReactPasswordStrength-strength-bar {
+  box-sizing: border-box;
+  height: 2px;
+  position: relative; top: 1px; right: 1px;
+  transition: width 300ms ease-out;
+}
+
+.is-strength--1 .ReactPasswordStrength-strength-bar {
+  background: #D1462F;
+  display: none;
+}
+
+.is-strength-0 .ReactPasswordStrength-strength-bar {
+  background: #D1462F;
+  width: 50px;
+  display: block;
+}
+
+.is-strength-1 .ReactPasswordStrength-strength-bar {
+  background: #D1462F;
+  width: 70px;
+  display: block;
+}
+
+.is-strength-2 .ReactPasswordStrength-strength-bar {
+  background: #57B8FF;
+  width: 141px;
+  display: block;
+}
+
+.is-strength-3 .ReactPasswordStrength-strength-bar {
+  background: #57B8FF;
+  width: 192px;
+  display: block;
+}
+
+.is-strength-4 .ReactPasswordStrength-strength-bar {
+  background: #2FBF71;
+  width: 256px;
+  display: block;
+}
+
 .message-list {
   background: #f5f4f7;
   position: fixed;
